--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,28 @@ header ul.nav li:hover {
     opacity: 0.5;
 }
 
+header .shop-cart .item .delete-icon{
+    color: #811010;
+    float: right;
+    position: relative;
+    top: 25px;
+    cursor: pointer;
+    transition: transform 500ms ease;
+}
+
+header .shop-cart .item .delete-icon{
+    color: #d40000;
+    transform: scale(1.5);
+}
+
+header .shop-cart .summa{
+    float: left;
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
 header .presentation {
     margin: 50px 0;
     background: url('./img/blini.jpg') no-repeat;
