--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,6 @@ body {
     margin: 50px auto;
 }
 
-header {
-    position: relative;
-}
-
 header .logo {
     font-weight: 600;
     font-size: 20px;
@@ -42,6 +38,85 @@ header ul.nav li:hover {
     opacity: 0.5;
 }
 
+header .shop-cart .item .delete-icon{
+    color: #811010;
+    float: right;
+    position: relative;
+    top: 25px;
+    cursor: pointer;
+    transition: transform 500ms ease;
+}
+
+header .shop-cart .item .delete-icon{
+    color: #d40000;
+    transform: scale(1.5);
+}
+
+header .shop-cart .summa{
+    float: left;
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+header .shop-cart {
+    float: right;
+    cursor: pointer;
+    transition: color, transform 500ms ease;
+}
+
+header .shop-cart:hover,
+header .shop-cart.active {
+    color: #dc3d3d;
+    transform: scale(1.5);
+}
+
+header .cart-op {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 450px;
+    background: #fafafa;
+    box-shadow: -3px 6px 21px -1px rgba(0,0,0,0.46);
+    -webkit-box-shadow: -3px 6px 21px -1px rgba(0,0,0,0.46);
+    -moz-box-shadow: -3px 6px 21px -1px rgba(0,0,0,0.46);
+    z-index: 1000;
+
+    padding: 20px;
+    padding-bottom: 0;
+}
+
+header {
+    position: relative;
+}
+
+
+header .cart-op .empty h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+header .cart-op .item {
+    width: 100%;
+    float: left;
+    margin-bottom: 20px;
+}
+
+header .cart-op .item img{
+    width: 70px;
+    float: left;
+    margin-right: 20px;
+}
+
+header .cart-op .item h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+header .cart-op .item p {
+    font-weight: 600;
+    color: #797979;
+}
 header .presentation {
     margin: 50px 0;
     background: url('./img/blini.jpg') no-repeat;
