--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,31 @@ header .cart-op .item p {
     font-weight: 600;
     color: #797979;
 }
+
+header .cart-op .item .delete-icon {
+    color: #ca5252;
+    float: right;
+    position: relative;
+    top: -25px;
+    cursor: pointer;
+    transition:  color, transform 500ms ease;
+}
+
+header .cart-op .item .delete-icon:hover {
+    color: #d83030;
+    transform: scale(1.5);
+}
+
+header .cart-op .summ {
+    float: left;
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+    margin-top: 0px;
+}
+
 header .presentation {
     margin: 50px 0;
     background: url('./img/blini.jpg') no-repeat;
@@ -151,6 +176,43 @@ header .presentation::before {
     color: #fff;
 }
 
+.categories div {
+    display: inline-block;
+    background: #f2f2f2;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-bottom: 25px;
+    margin-right: 15px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    transition: all 500ms ease;
+}
+
+.categories div:hover {
+    border-color: silver;
+    transform: scale(1.1);
+}
+
+.full-item {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000000a8;
+    z-index: 9999;
+    overflow: auto;
+}
+
+.full-item > div {
+    width: 600px;
+    position: relative;
+    margin: 10% auto;
+    padding: 40px 30px;
+    background: #fff;
+    border-radius: 9px;
+}
+
 main
 {
     display: flex;
@@ -170,22 +232,28 @@ main .item {
 
 }
 
-main .item img{
+main .item img, .full-item img{
     width: 100%;
     border-radius: 10px 10px 0 0;
     transition: transform 500ms ease;
+    cursor: pointer;
 }
 
-main .item img:hover {
+main .item img:hover, .full-item img:hover{
     transform: scale(1.05)
 }
-main h2, main, p, b, g{
+main h2, .full-item h2,
+main, 
+p, .full-item p,
+b, .full-item b,
+g, .full-item g {
     margin: 10px 20px;
     color: #333;
 
 }
 
-main .add-to-cart{
+main .add-to-cart,
+.full-item .add-to-cart{
     position:absolute;
     right: 20px;
     bottom: 20px;
@@ -201,7 +269,8 @@ main .add-to-cart{
     transition: transform 500ms ease;
 }
 
-main .add-to-cart:hover {
+main .add-to-cart:hover,
+.full-item .add-to-cart:hover {
     transform: scale(1.5) translateY(-5px)
     
 }
